package Users;

public class Admin extends Employee {

    public Admin(String gSurname, String gName, String gOtchestvo, int gUserId, int gUserPositionId) {
        super(gSurname, gName, gOtchestvo, gUserId, gUserPositionId);
    }
}
