@startuml

title __KPSERVER's Class Diagram__\n

  namespace Controllers {
    class Controllers.DBController {
    }
  }
  

  namespace Controllers {
    class Controllers.SignInController {
    }
  }
  

  namespace Users {
    class Users.Admin {
    }
  }
  

  namespace Users {
    class Users.Buhgalter {
    }
  }
  

  namespace Users {
    class Users.Director {
    }
  }
  

  namespace Users {
    class Users.Employee {
    }
  }
  

  namespace Users {
    abstract class Users.User {
    }
  }
  

  namespace server {
    class server.MultithreadedSocketServer {
    }
  }
  

  namespace server {
    class server.Server {
    }
  }
  

  namespace server {
    class server.ServerClientThread {
    }
  }
  

  Users.Admin -up-|> Users.Employee
  Users.Buhgalter -up-|> Users.Employee
  Users.Director -up-|> Users.Employee
  Users.Employee -up-|> Users.User
  server.ServerClientThread o-- Controllers.DBController : dbController


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
